resources/less/geometry/file-tree.less
// Geometry for the tree view

#file-tree {
    position:absolute;
    top:0;
    left:0%;
    width:100%;
    bottom:0;
    overflow-y: auto;
    outline: none;
    transition:0.3s left ease;

    &.hidden { left:-100%; }

    #directories-dirs-header, #directories-files-header {
      height: @ribbon-height;
      vertical-align: bottom;
      margin-top: @ribbon-height/2;

      clr-icon {
        width: 12px;
        height: 12px;
        margin-left: 3px;
        margin-right: 3px;
        vertical-align: bottom;
      }
    }

    .filename {
        line-height: @ribbon-height;
        padding:@ribbon-padding;
        white-space: nowrap;
        padding-left:5px;
        margin:5px 0px;
        overflow: hidden;
    }

    .list-item {
      position: relative;

      &.directory .sorter {
        display: block;
        position: absolute;
        top: 0px;
        right: 0px;
        padding-left: 5px;

        .sortDirection, .sortType {
          margin: 5px 3px;
        }
      }
    }

    .list-item.dead-directory > p.filename::before {
      content: '\f5d7';
      font-family: @font-icon;
      font-size: @font-size-small;
      margin-right: 5px;
      display: inline-block;
      position: relative;
      text-align: text-bottom;
    }

    // Mimick a list item for the display indicator in combined mode
    .list-item.display-search-results {
      p.filename::before {
        content: '\f0c5';
        font-family: @font-icon;
        font-size: @font-size-small * 0.8;
        display: inline-block;
        width: 18px;
      }
    }

    .empty-tree {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        text-align: center;
        cursor: pointer; // Indicate that the user can click the area

        .info {
            display: block;
            padding: 10px;
            margin-top: 50%;
            font-weight: bold;
            font-size: 200%;
        }
    }
}

